[package]
name = "rumble"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
poise = "0.6.1"
serenity = "0.12"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "migrate", "time", "macros"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
