[package]
name = "rumble"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
chrono = "0.4.41"
dotenvy = "0.15.7"
indoc = "2.0.6"
poise = "0.6.1"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.21", features = ["cookies", "multipart", "stream", "json"] }
serde_json = "1.0.140"
serenity = "0.12"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "migrate", "chrono", "macros"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
unicode-width = "0.2.1"
